--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 </div>
 <div class="form-group">
 <label class="block mb-2 font-semibold text-theme-heading text-lg" for="businessStartDate">Business Start Date</label>
-<input class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="businessStartDate" name="businessStart" required="" type="date"/>
+<input class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="businessStartDate" name="businessStart123" required="" type="date"/>
 </div>
 <div class="form-group"><label class="block mb-2 font-semibold text-theme-heading text-lg" for="legalEntity">Legal Entity</label><input class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="legalEntity" name="legalEntity121" placeholder="LLC, corporation, sole prop..." required="" type="text"/></div>
 <div class="form-group">
@@ -439,7 +439,7 @@
 </div>
 <div class="form-group">
 <label class="block mb-2 font-semibold text-theme-heading text-lg" for="dateOfBirth">Date of Birth</label>
-<input class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="dateOfBirth" name="dateOf" required="" type="date"/>
+<input class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="dateOfBirth" name="dateOf124" required="" type="date"/>
 </div>
 <div class="form-group">
 <label class="block mb-2 font-semibold text-theme-heading text-lg" for="homeStreetAddress">Home Street Address</label>
