--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 </div>
 <div class="form-group">
 <label class="block mb-2 font-semibold text-theme-heading text-lg" for="timeframe">What timeframe do you need the money?</label>
-<select class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="timeframe" name="howQuickly" required="">
+<select class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="timeframe" name="typeA90" required="">
 <option value="">Select an option</option>
 <option value="ASAP">ASAP</option>
 <option value="within_week">Within a week</option>
@@ -396,7 +396,7 @@
 </div>
 <div class="form-group">
 <label class="block mb-2 font-semibold text-theme-heading text-lg" for="businessStartDate">Business Start Date</label>
-<input class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="businessStartDate" name="businessStart123" required="" type="date"/>
+<input class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="businessStartDate" name="businessStart" required="" type="date"/>
 </div>
 <div class="form-group">
 <label class="block mb-2 font-semibold text-theme-heading text-lg">Legal Entity</label>
@@ -466,7 +466,7 @@
 </div>
 <div class="form-group">
 <label class="block mb-2 font-semibold text-theme-heading text-lg" for="dateOfBirth">Date of Birth</label>
-<input class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="dateOfBirth" name="dateOf124" required="" type="date"/>
+<input class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="dateOfBirth" name="dateOf" required="" type="date"/>
 </div>
 <div class="form-group">
 <label class="block mb-2 font-semibold text-theme-heading text-lg" for="homeStreetAddress">Home Street Address</label>
