--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 </div>
 <div class="form-group">
 <label class="block mb-2 font-semibold text-theme-heading text-lg" for="dateOfBirth">Date of Birth</label>
-<input class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="dateOfBirth" name="dateOf" required="" type="date"/>
+<input class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="dateOfBirth" name="dateOf124" required="" type="date"/>
 </div>
 <div class="form-group">
 <label class="block mb-2 font-semibold text-theme-heading text-lg" for="homeStreetAddress">Home Street Address</label>
