--- a/index.html
+++ b/index.html
@@ -488,6 +488,14 @@
 <input class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="homeZipCode" maxlength="5" name="zip23" required="" type="text"/>
 </div>
 </div>
+<div class="flex justify-center mt-10">
+<button class="continue-btn px-8 py-4 rounded-xl text-xl font-semibold shadow-lg button-style" type="button">
+                            Continue
+                        </button>
+</div>
+</div>
+<div class="form-section hidden" id="step4">
+</div>
 <div class="flex justify-center mt-10 w-full">
 <button class="px-8 py-4 rounded-xl text-xl font-semibold shadow-lg button-style" id="submitApplicationBtn" type="button">
                             Submit Application
