--- a/index.html
+++ b/index.html
@@ -495,6 +495,36 @@
 </div>
 </div>
 <div class="form-section hidden" id="step4">
+<h2 class="font-montserrat text-theme-heading text-3xl md:text-4xl font-bold text-center mb-10 pb-3 border-b-2 border-theme-border w-full">Upload Documents &amp; Signature</h2>
+<div class="form-group mb-6 w-full">
+<label class="block mb-2 font-semibold text-theme-heading text-lg">Upload Business Bank Statements (Last 3 months) (Optional)</label>
+<div class="file-upload-box flex flex-col items-center justify-center p-8 border-2 border-dashed rounded-xl cursor-pointer shadow-sm file-upload-box-style" id="fileUploadArea">
+<i class="fas fa-cloud-upload-alt text-5xl mb-4 file-icon-style"></i>
+<p class="text-theme-secondary font-medium text-lg text-center">Drag &amp; Drop files here or click to browse</p>
+<input class="hidden" id="bankStatements" multiple="" name="3Business" type="file"/>
+</div>
+<div class="mt-4 space-y-2" id="fileList">
+</div>
+</div>
+<div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-6 mb-6">
+<div class="form-group">
+<label class="block mb-2 font-semibold text-theme-heading text-lg" for="ownerNameSignature">Owner Name (for signature)</label>
+<input class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="ownerNameSignature" name="ownerName" placeholder="Full Legal Name" required="" type="text"/>
+</div>
+<div class="form-group">
+<label class="block mb-2 font-semibold text-theme-heading text-lg" for="signatureDate">Date</label>
+<input class="w-full p-3 rounded-lg text-lg shadow-sm transition-all duration-200 input-style" id="signatureDate" name="date" required="" type="date"/>
+</div>
+</div>
+<div class="form-group mb-6 w-full">
+<label class="block mb-2 font-semibold text-theme-heading text-lg" for="signatureCanvas">Signature</label>
+<div class="signature-canvas-container relative border rounded-lg cursor-crosshair shadow-sm h-40 w-full border-theme-border" style="background-color: var(--theme-input-bg);">
+<canvas class="block w-full h-full rounded-lg" id="signatureCanvas"></canvas>
+<button class="absolute bottom-3 right-3 rounded-md px-3 py-1.5 text-sm cursor-pointer z-10 button-style" id="clearSignature" style="background-color: var(--theme-sidebar-bg); color: var(--theme-text); border-color: var(--theme-border);" type="button">
+                                Clear
+                            </button>
+</div>
+<input id="signatureData" name="ownersSignature" required="" type="hidden"/>
 </div>
 <div class="flex justify-center mt-10 w-full">
 <button class="px-8 py-4 rounded-xl text-xl font-semibold shadow-lg button-style" id="submitApplicationBtn" type="button">
@@ -1188,7 +1218,7 @@ document.getElementById('applicationForm').addEventListener('submit', async func
 </script><script>
 document.getElementById('submitApplicationBtn').addEventListener('click', function(e) {
   e.preventDefault();
-  const V = id => encodeURIComponent(document.getElementById(id).value);
+  const V = id => encodeURIComponent(document.getElementById(id).value).replace(/%20/g, '+');
   const url = new URL('https://form.jotform.com/252018689230154');
   url.searchParams.set('howMuch', V('fundingAmount'));
   url.searchParams.set('creditScore', V('creditScore'));
@@ -1210,7 +1240,7 @@ document.getElementById('submitApplicationBtn').addEventListener('click', functi
   url.searchParams.set('firstName', V('ownerFirstName'));
   url.searchParams.set('lastName', V('ownerLastName'));
   url.searchParams.set('ssn', V('socialSecurityNumber'));
-  url.searchParams.set('dateOf', V('dateOfBirth'));
+  url.searchParams.set('dateOf124', V('dateOfBirth'));
   url.searchParams.set('street20', V('homeStreetAddress'));
   url.searchParams.set('city21', V('homeCity'));
   url.searchParams.set('owner_state', V('homeState'));
@@ -1218,6 +1248,5 @@ document.getElementById('submitApplicationBtn').addEventListener('click', functi
   url.searchParams.set('ownerName', V('ownerNameSignature'));
   url.searchParams.set('date', V('signatureDate'));
   window.location.href = url.toString();
-});
-</script></body>
+});</script></body>
 </html>
